# xml-rpc

./: CMakeLists.txt  MyXmlRPCServer.py  README.md  config.json  converter.cpp  converter.py  new_client.py  new_server.py  xmlrpc_client.py  xmlrpc_server.py
DB/: traj1.json
Data/: traj1.kml
Data/grids/: grid1.txt  grid2.txt  grid3.txt  grid4.txt
Data/trajectories/: traj2.json  traj3.json  traj4.json  traj5.json
Output/: traj1.kml  traj2.kml  traj3.kml  traj4.kml  traj5.kml
